--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,55 +12,27 @@
 // https://stackoverflow.com/questions/39535760/what-does-a-tilde-in-a-css-url-do
 
 @import "~normalize-scss/sass/normalize/import-now";
-// Add your own components and import them like this:
-//
-// @import "components/my_new_component";
+@import "~font-awesome/scss/font-awesome";
 
-// Default Lucky styles.
-// Delete these when you're ready to bring in your own CSS.
+@import "mixins/fonts";
+
+@import "variables/colors";
+
+@import "components/header";
+@import "components/content";
+@import "components/footer";
+
 body {
-  font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 20px 40px;
+  background-color: #fff;
+  font-family: "Bitter", serif;
+  color: $color_text_darkest;
 }
 
-label, input {
-  display: flex;
-}
+a {
+  color: $color_text_darkest;
+  text-decoration: none;
 
-label {
-  font-weight: 500;
-}
-
-[type='color'],
-[type='date'],
-[type='datetime'],
-[type='datetime-local'],
-[type='email'],
-[type='month'],
-[type='number'],
-[type='password'],
-[type='search'],
-[type='tel'],
-[type='text'],
-[type='time'],
-[type='url'],
-[type='week'],
-input:not([type]),
-textarea {
-  border-radius: 3px;
-  border: 1px solid #bbb;
-  margin: 7px 0 14px 0;
-  max-width: 400px;
-  padding: 8px 6px;
-  width: 100%;
-}
-
-[type='submit'] {
-  font-weight: 900;
-  margin: 9px 0;
-  padding: 6px 9px;
+  &:visited {
+    color: $color_text_darkest;
+  }
 }
