Further work on post index and post form

--- a/src/css/variables/_colors.scss
+++ b/src/css/variables/_colors.scss
@@ -1,4 +1,5 @@
 $color_text_darkest: #333;
-$color_text_darker: #444;
-$color_text_dark: #555;
+$color_text_darker: #555;
+$color_text_dark: #777;
+$color_text_neutral: #bbb;
 $color_link: #d1603d;
