--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,6 +22,8 @@
 @import "components/content";
 @import "components/footer";
 
+@import "components/posts_index";
+
 body {
   background-color: #fff;
   font-family: "Bitter", serif;
