--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,8 +1,8 @@
 header {
-  background-color: #f6f6f6;
+  background-color: #fafafa;
   padding: 0 1em;
   margin-bottom: 2em;
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.07);
   font-size: 1.25em;
   height: 2.5em;
   line-height: 2.5em;
