Add form styling, date picker component

--- a/src/css/components/_posts_index.scss
+++ b/src/css/components/_posts_index.scss
@@ -9,7 +9,7 @@
 
     &-left {
       grid-column: 1;
-      color: $color_text_neutral;
+      color: $color_text_light;
 
       .posts-list-post-date {
       }
