--- a/src/css/variables/_colors.scss
+++ b/src/css/variables/_colors.scss
@@ -1,5 +1,8 @@
 $color_text_darkest: #333;
 $color_text_darker: #555;
 $color_text_dark: #777;
-$color_text_neutral: #bbb;
+$color_text_light: #bbb;
+$color_text_lighter: #ddd;
+$color_text_lightest: #eee;
 $color_link: #d1603d;
+$color_accent: #1CDDFF;
