--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,18 +1,19 @@
 // Lucky generates 3 folders to help you organize your CSS:
-//
+
 //    - static/css/variables # Files for colors, spacing, etc.
 //    - static/css/mixins # Put your mixin functions in files here
 //    - static/css/components # CSS for your components
-//
+
 // Remember to import your new CSS files or they won't be loaded:
-//
+
 //    @import "./variables/colors" # Imports the file in static/css/variables/_colors.scss
-//
+
 // Note: importing with `~` tells webpack to look in the installed npm packages
 // https://stackoverflow.com/questions/39535760/what-does-a-tilde-in-a-css-url-do
 
 @import "~normalize-scss/sass/normalize/import-now";
 @import "~font-awesome/scss/font-awesome";
+@import "~flatpickr/dist/flatpickr.min.css";
 
 @import "mixins/fonts";
 
@@ -21,6 +22,7 @@
 @import "components/header";
 @import "components/content";
 @import "components/footer";
+@import "components/forms";
 
 @import "components/posts_index";
 
