Set constant header and content width, fix post index dates

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -10,7 +10,7 @@ header {
   #header-content {
     display: flex;
     justify-content: space-between;
-    max-width: 35em;
+    max-width: 50rem;
     margin: 0 auto;
 
     &-right {
