Add transition to all links

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -35,8 +35,13 @@ body {
 a {
   color: $color_text_darkest;
   text-decoration: none;
+  transition: 0.15s ease;
 
   &:visited {
     color: $color_text_darkest;
+  }
+
+  &:hover {
+    color: $color_accent;
   }
 }
