--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -45,3 +45,10 @@ a {
     color: $color_accent;
   }
 }
+
+.flash-success {
+  color: darken($color_accent, 16);
+  font-size: 1.25em;
+  text-align: center;
+  margin-bottom: 0.75em;
+}
