Start post show styling, add markdown rendering

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -25,6 +25,7 @@
 @import "components/forms";
 
 @import "components/posts_index";
+@import "components/posts_show";
 
 body {
   background-color: #fff;
