--- a/src/css/components/_posts_show.scss
+++ b/src/css/components/_posts_show.scss
@@ -25,4 +25,38 @@
     max-width: 100%;
     margin: 0 auto;
   }
+
+  h1, h2, h3, h4 {
+    line-height: 120%;
+  }
+
+  h1:not(:first-child),
+  h2:not(:first-child),
+  h3:not(:first-child),
+  h4:not(:first-child) {
+    margin-top: 2em;
+  }
+
+  h1:first-child,
+  h2:first-child,
+  h3:first-child,
+  h4:first-child {
+    margin-top: 0;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.25em;
+  }
+
+  h3 {
+    font-size: 1.1em;
+  }
+
+  h4 {
+    font-size: 1em;
+  }
 }
