--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -24,6 +24,7 @@
 @import "components/content";
 @import "components/footer";
 @import "components/forms";
+@import "components/tables";
 
 @import "components/code";
 
