--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -1,12 +1,9 @@
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  grid-row-start: 3;
+  grid-row-end: 4;
   background-color: #fafafa;
   color: $color_text_light;
   padding: 0 1em;
-  margin-top: 2em;
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.07);
   font-size: 1em;
   height: 2.5em;
