--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,11 +1,11 @@
 header {
+  grid-row-start: 1;
+  grid-row-end: 2;
   background-color: #fafafa;
   padding: 0 1em;
-  margin-bottom: 2em;
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.07);
   font-size: 1.25em;
-  height: 2.5em;
-  line-height: 2.5em;
+  line-height: 3rem;
 
   #header-content {
     display: flex;
