Make post index mobile friendly

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -19,6 +19,7 @@
 @import "mixins/fonts";
 
 @import "variables/colors";
+@import "variables/breakpoints";
 
 @import "components/header";
 @import "components/content";
