--- a/src/css/components/_posts_index.scss
+++ b/src/css/components/_posts_index.scss
@@ -1,41 +1,62 @@
 #posts-list {
+  & > * + * {
+    margin-top: 2em;
+  }
+
   .posts-list-post {
     display: grid;
-    grid-template-columns: 15em auto;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto;
 
-    &:not(:last-child) {
-      margin-bottom: 2em;
+    @include md {
+      grid-template-columns: 15em auto;
+      grid-template-rows: auto;
     }
 
-    &-left {
-      grid-column: 1;
-      text-align: right;
-      margin-right: 2em;
-      margin-top: 0.6em;
+    &-title {
+      grid-row: 1;
+      font-size: 1.75rem;
+      line-height: 130%;
+      margin-bottom: 0.5em;
+      color: $color_text_darkest;
 
-      .posts-list-post-date {
-        color: $color_text_light;
-        margin-bottom: 1em;
-      }
-
-      .posts-list-post-date-updated {
-        color: $color_text_lighter;
+      @include md {
+        grid-column: 2;
       }
     }
 
-    &-right {
-      grid-column: 2;
+    &-dates {
+      color: $color_text_light;
+      margin-bottom: 1em;
 
-      .posts-list-post-title {
-        font-size: 1.75rem;
-        line-height: 130%;
-        margin-bottom: 0.5em;
-        color: $color_text_darkest;
+      @include md {
+        margin-bottom: 0;
+        margin: 0.35em 1em 0 0;
       }
 
-      .posts-list-post-tagline {
-        color: $color_text_dark;
-        line-height: 150%;
+      .post-date-created {
+  
+      }
+
+      .post-date-updated {
+        color: $color-text-lighter;
+
+        @include md {
+          // This is an interesting "hack" which is a really simple way to force
+          // the updated section on to a new line in pure CSS
+          display: table;
+          margin-top: 0.5em;
+        }
+      }
+    }
+
+    &-tagline {
+      grid-row: 3;
+      color: $color_text_dark;
+      line-height: 150%;
+
+      @include md {
+        grid-column: 2;
       }
     }
   }
