--- a/src/css/components/_content.scss
+++ b/src/css/components/_content.scss
@@ -1,7 +1,17 @@
 #content {
   grid-row-start: 2;
   grid-row-end: 3;
-  margin: 2em auto;
-  padding: 0 2em;
-  max-width: 50rem;
+  margin: 3em 0;
+  padding: 0 1em;
+  max-width: 100vw;
+
+  @include md {
+    padding: 0 2em;
+  }
+
+  @include lg {
+    margin: 2em auto;
+    padding: 0 2em;
+    max-width: 50rem;
+  }
 }
