Add Tags to Posts

--- a/src/css/components/_posts_index.scss
+++ b/src/css/components/_posts_index.scss
@@ -25,6 +25,10 @@
       }
     }
 
+    &-tags {
+      margin-top: 2em;
+    }
+
     &-dates {
       color: $color_text_light;
       margin-bottom: 1em;
